--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html, body {
+    @apply m-0 p-0;
+  }
+}
 /* html,
 body {
   padding: 0;
